kubernetes/apps/_base/default/podinfo/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
spec:
  selector:
    app: podinfo
  ports:
    - name: http
      port: 80
      targetPort: 9898
  type: LoadBalancer
  loadBalancerClass: tailscale
