kubernetes/apps/_base/default/podinfo/app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: podinfo-gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      oci.oraclecloud.com/load-balancer-type: "nlb"
  listeners:
    - protocol: HTTP
      port: 80
      name: podinfo-route
      allowedRoutes:
        namespaces:
          from: Same
